# codezilla

./: .gitignore  README.md  RELEASE_NOTES.md  USER_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md
scripts/: fetch-heed.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/claude-hooks/: post-tool-use.sh  pre-tool-use.sh  stop.sh  user-prompt-submit.sh
src-tauri/resources/codex-hooks/: post-tool-use.sh  pre-tool-use.sh  stop.sh  user-prompt-submit.sh
src-tauri/src/: cli_detect.rs  lib.rs  main.rs
src-tauri/src/claude_hooks/: mod.rs  types.rs
src-tauri/src/codex_hooks/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/cutover/: mod.rs
src-tauri/src/fs/: mod.rs  watcher.rs
src-tauri/src/git/: mod.rs  types.rs
src-tauri/src/heed_client/: mod.rs
src-tauri/src/launchd/: mod.rs
src-tauri/src/pty/: mod.rs  session.rs
src-tauri/src/skills/: detect.rs  mod.rs  types.rs
src-tauri/src/transcript/: discover.rs  mod.rs
src-tauri/src/usage/: claude.rs  codex.rs  mod.rs
src/components/: BetaFeaturesManager.tsx  ErrorBoundary.tsx  FileLinkMenu.tsx  FilePickerPopup.tsx  ProjectIcon.tsx
src/hooks/: useAllFileDiffStats.ts  useCloseProtection.ts  useFileTree.ts  useFileWatcher.ts  useGitBranch.ts  useGitDiffStat.ts  useGitStatus.ts  usePty.ts  (+14 more)
tests/: file-path-link.test.ts  local-markdown-assets.test.ts  prose-copy.test.ts  thread-activity.test.ts
(+89 files in other folders)
